Code has been changed according to obtained requirements